--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,12 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
-  "plugins": ["simple-import-sort"],
+  "extends": ["next", "next/core-web-vitals", "eslint:recommended", "prettier"],
+  "plugins": ["prettier", "simple-import-sort"],
   "globals": {
     "React": "readonly"
   },
   "rules": {
+    "prettier/prettier": "warn",
+    "no-console": "warn",
     "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
   }
 }
