--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "eslint": "eslint \"**/*.+(js|jsx|ts|tsx)\"",
-    "eslint:fix": "eslint --fix \"**/*.+(js|jsx|ts|tsx)\"",
-    "prettier": "prettier --check \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
-    "prettier:fix": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "eslint": "eslint \"./src/**/*.+(js|jsx|ts|tsx)\"",
+    "eslint:fix": "eslint --fix \"./src/**/*.+(js|jsx|ts|tsx)\"",
+    "prettier": "prettier --check \"./src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
+    "prettier:fix": "prettier --write \"./src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|md|css)\"",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "daisyui": "^2.51.3",
+    "flickity": "^2.3.0",
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
