--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-flickity-component": "^4.0.5"
+    "react-flickity-component": "^4.0.5",
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
