--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
