--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,10 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports": true,
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": false
   },
   "files.associations": {
     "*.css": "tailwindcss"
-  }
+  },
+  "cssModules.camelCase": true
 }
