--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "daisyui": "^2.51.5",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.2.4",
+    "next-auth": "^4.21.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swiper": "^9.2.0"
   },
   "devDependencies": {
