--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended", "prettier"],
-  "plugins": ["prettier", "simple-import-sort"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "next",
+    "next/core-web-vitals",
+    "plugin:@next/next/recommended"
+  ],
+  "plugins": ["prettier"],
   "globals": {
     "React": "readonly"
   },
