Add step 1 topup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,8 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
-  "cssModules.camelCase": true
+  "cssModules.camelCase": true,
+  "tailwindCSS.experimental.classRegex": [
+    ["clsx\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
+  ]
 }
