--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
+    "clsx": "^1.2.1",
     "daisyui": "^2.51.5",
     "next": "^13.2.4",
     "next-auth": "^4.21.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
+    "@svgr/webpack": "^7.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
