--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^9.2.0"
+    "swiper": "^9.2.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
