Update eslint and depedencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,22 @@
 {
   "extends": [
     "eslint:recommended",
-    // "plugin:prettier/recommended",
-    "next",
+    "plugin:@typescript-eslint/recommended",
     "next/core-web-vitals",
-    "plugin:@next/next/recommended"
+    "plugin:@next/next/recommended",
+    "plugin:prettier/recommended"
   ],
-  // "plugins": ["prettier"],
+  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "globals": {
     "React": "readonly"
   },
+  "parserOptions": {
+    "tsconfigRootDir": "./",
+    "project": ["tsconfig.json"]
+  },
   "rules": {
-    // "prettier/prettier": "warn",
+    "prettier/prettier": "warn",
     "no-console": "warn",
     "no-unused-vars": "warn"
   }
