--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
     "cssnano-preset-advanced": "^6.0.0",
