--- a/package.json
+++ b/package.json
@@ -22,25 +22,23 @@
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^9.2.0",
-    "zustand": "^4.3.7"
+    "swiper": "^9.2.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
     "@svgr/webpack": "^7.0.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@types/node": "^18.16.5",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
     "cssnano-preset-advanced": "^6.0.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
@@ -48,6 +46,7 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zustand": "^4.3.8"
   }
 }
