--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,11 @@
 {
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
-    "next/core-web-vitals",
     "plugin:@next/next/recommended",
+    "next/core-web-vitals",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint"],
-  "parser": "@typescript-eslint/parser",
-  "globals": {
-    "React": "readonly"
-  },
-  "parserOptions": {
-    "tsconfigRootDir": "./",
-    "project": ["tsconfig.json"]
-  },
+  "plugins": ["simple-import-sort"],
   "rules": {
     "no-console": "warn",
     "no-unused-vars": "warn"
