--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
+  "packageManager": "pnpm@7.32.2",
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.2.1",
