--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
-  "packageManager": "pnpm@7.32.2",
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.2.1",
@@ -23,7 +22,9 @@
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^9.2.0"
+    "sharp": "^0.32.1",
+    "swiper": "^9.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.1",
@@ -45,7 +46,6 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.5",
-    "zustand": "^4.3.8"
+    "typescript": "^4.9.5"
   }
 }
