--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@headlessui/react": "^1.7.13",
     "clsx": "^1.2.1",
     "daisyui": "^2.51.5",
+    "embla-carousel-autoplay": "^8.0.0-rc03",
+    "embla-carousel-react": "^8.0.0-rc03",
     "next": "^13.4.1",
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.1",
-    "swiper": "^9.2.0",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
@@ -43,8 +44,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.5"
   }
