--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
+    "@headlessui/react": "^1.7.14",
     "clsx": "^1.2.1",
-    "daisyui": "^2.51.5",
-    "embla-carousel-autoplay": "^8.0.0-rc03",
-    "embla-carousel-react": "^8.0.0-rc03",
-    "next": "^13.4.1",
+    "daisyui": "^2.51.6",
+    "embla-carousel-autoplay": "8.0.0-rc05",
+    "embla-carousel-react": "8.0.0-rc05",
+    "next": "^13.4.3",
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,25 +28,25 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.1",
-    "@svgr/webpack": "^7.0.0",
+    "@next/eslint-plugin-next": "^13.4.3",
+    "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^18.16.5",
-    "@types/react": "^18.2.6",
+    "@types/node": "^20.2.3",
+    "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "autoprefixer": "^10.4.14",
-    "cssnano": "^6.0.0",
-    "cssnano-preset-advanced": "^6.0.0",
-    "eslint": "^8.40.0",
-    "eslint-config-next": "^13.4.1",
+    "cssnano": "^6.0.1",
+    "cssnano-preset-advanced": "^6.0.1",
+    "eslint": "^8.41.0",
+    "eslint-config-next": "^13.4.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
-    "postcss": "^8.4.21",
+    "lint-staged": "^13.2.2",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.5"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
