--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "daisyui": "^2.51.6",
     "embla-carousel-autoplay": "8.0.0-rc05",
     "embla-carousel-react": "8.0.0-rc05",
+    "firebase": "^9.22.1",
     "next": "^13.4.3",
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reactfire": "^4.2.2",
     "sharp": "^0.32.1",
     "zustand": "^4.3.8"
   },
