--- a/package.json
+++ b/package.json
@@ -15,40 +15,41 @@
     "pre-commit": "lint-staged"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
+    "@headlessui/react": "^1.7.15",
     "clsx": "^1.2.1",
-    "daisyui": "^2.51.6",
-    "embla-carousel-autoplay": "8.0.0-rc05",
-    "embla-carousel-react": "8.0.0-rc05",
-    "firebase": "^9.22.1",
-    "next": "^13.4.3",
-    "next-auth": "^4.21.1",
+    "daisyui": "^3.1.6",
+    "embla-carousel-autoplay": "8.0.0-rc07",
+    "embla-carousel-react": "8.0.0-rc07",
+    "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
+    "next": "^13.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactfire": "^4.2.2",
     "sharp": "^0.32.1",
+    "xendit-node": "^1.21.15",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.4.3",
+    "@next/eslint-plugin-next": "^13.4.7",
     "@svgr/webpack": "^8.0.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.2.3",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
-    "eslint": "^8.41.0",
-    "eslint-config-next": "^13.4.3",
+    "eslint": "^8.43.0",
+    "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
