--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-API_KEY=
-AUTH_DOMAIN=
-PROJECT_ID=
-STORAGE_BUCKET=
-MESSAGING_SENDER_ID=
-APP_ID=
-MEASUREMENT_ID=
+NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_AUTH_DOMAIN=
+NEXT_PUBLIC_PROJECT_ID=
+NEXT_PUBLIC_STORAGE_BUCKET=
+NEXT_PUBLIC_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_APP_ID=
+NEXT_PUBLIC_MEASUREMENT_ID=
 XENDIT_SECRET=
+XENDIT_SUCCESS_REDIRECT_URL=http://localhost:3000/payment/success
