--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "embla-carousel-autoplay": "8.0.0-rc07",
     "embla-carousel-react": "8.0.0-rc07",
     "firebase": "^9.23.0",
-    "firebase-admin": "^11.9.0",
+    "framer-motion": "^10.12.18",
+    "lucide-react": "^0.257.0",
     "next": "^13.4.7",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactfire": "^4.2.2",
@@ -43,7 +45,6 @@
     "eslint": "^8.43.0",
     "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.24",
